<?xml version="1.0" encoding="utf-8"?>
<!-- en Anglais-->
<resources>
    <string name="app_name">VegetableSoup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tw1">La recette authentique de la soupe de légume</string>
    <string name="tw2">Ajoutez légumes pour faire une bonne soupe !</string>
    <string name="addVegetableButton">+</string>
    <string name="removeVegetableButton">-</string>
    <string name="aPicture">uneImage</string>
    <string name="makeBoiling">Make water boiling</string>
    <string name="addSaltAndPepperText">Maintenant mixez le tout, ajoutez du sel et du poivre… Régalez-vous !</string>
    <string name="add">Add</string>
    <string-array name="soupIngredients">
        <item>potato</item>
        <item>carrot</item>
        <item>leek</item>
    </string-array>
    <string-array name="soupIngredientsQuantities">
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>
</resources>

